--- a/DA0101EN_Review_Introduction_.ipynb
+++ b/DA0101EN_Review_Introduction_.ipynb
@@ -22,20 +22,19 @@
     },
     "colab": {
       "name": "DA0101EN-Review-Introduction .ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fwpjOb6-WD8p",
+        "id": "view-in-github",
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://www.bigdatauniversity.com\"><img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DA0101EN/Images/CCLog.png\" width=300, align=\"center\"></a>\n",
-        "\n",
-        "<h1 align=center><font size = 5>Data Analysis with Python</font></h1>"
+        "<a href=\"https://colab.research.google.com/github/Brillianttyagi/Data-Analysis-with-Python/blob/master/DA0101EN_Review_Introduction_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
