--- a/DA0101EN_Review_Introduction_.ipynb
+++ b/DA0101EN_Review_Introduction_.ipynb
@@ -22,56 +22,10 @@
     },
     "colab": {
       "name": "DA0101EN-Review-Introduction .ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Brillianttyagi/Data-Analysis-with-Python/blob/master/DA0101EN_Review_Introduction_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EgX9jPi0WD8r",
-        "colab_type": "text"
-      },
-      "source": [
-        "<h1>Introduction</h1>\n",
-        "<h3>Welcome!</h3>\n",
-        "\n",
-        "<p>\n",
-        "In this section, you will learn how to approach data acquisition in various ways, and obtain necessary insights from a dataset. By the end of this lab, you will successfully load the data into Jupyter Notebook, and gain some fundamental insights via Pandas Library.\n",
-        "</p>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "V5_IvwRVWD8y",
-        "colab_type": "text"
-      },
-      "source": [
-        "<h2>Table of Contents</h2>\n",
-        "\n",
-        "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
-        "<ol>\n",
-        "    <li><a href=\"#data_acquisition\">Data Acquisition</a>\n",
-        "    <li><a href=\"#basic_insight\">Basic Insight of Dataset</a></li>\n",
-        "</ol>\n",
-        "\n",
-        "Estimated Time Needed: <strong>10 min</strong>\n",
-        "</div>\n",
-        "<hr>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
